--- a/KoloLos/Views/ArticlesManager/Edit.cshtml
+++ b/KoloLos/Views/ArticlesManager/Edit.cshtml
@@ -7,30 +7,13 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
     <fieldset>
         <legend>Article</legend>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.PublishDate)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.PublishDate)
-            @Html.ValidationMessageFor(model => model.PublishDate)
-        </div>
-
-        @Html.HiddenFor(model => model.Id)
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Content)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Content)
-            @Html.ValidationMessageFor(model => model.Content)
-        </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.Title)
@@ -40,6 +23,17 @@
             @Html.ValidationMessageFor(model => model.Title)
         </div>
 
+
+        @Html.HiddenFor(model => model.Id)
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Content)
+        </div>
+        <div class="editor-field">
+            @Html.TextAreaFor(model => model.Content)
+            @Html.ValidationMessageFor(model => model.Content)
+        </div>
+
         <div class="editor-label">
             @Html.LabelFor(model => model.Author)
         </div>
@@ -47,13 +41,13 @@
             @Html.EditorFor(model => model.Author)
             @Html.ValidationMessageFor(model => model.Author)
         </div>
-
+        
         <div class="editor-label">
-            @Html.LabelFor(model => model.Abstract)
+            @Html.LabelFor(model => model.PublishDate)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.Abstract)
-            @Html.ValidationMessageFor(model => model.Abstract)
+            @Html.EditorFor(model => model.PublishDate)
+            @Html.ValidationMessageFor(model => model.PublishDate)
         </div>
 
         <p>
@@ -66,6 +60,6 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
+@section scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
