--- a/KoloLos/Views/Shared/ManagerLayout.cshtml
+++ b/KoloLos/Views/Shared/ManagerLayout.cshtml
@@ -1,38 +1,27 @@
 ﻿@{
-    Layout = "_Layout.cshtml";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    @*<link href="~/Content/manager.css" rel="stylesheet" />*@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<link href="~/Content/manager.css" rel="stylesheet" />
 
-<head>
-    <title>Super Simple Two Column from CSS-Tricks</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-</head>
+<div id="managerHeader">
+    <h1>Super Simple Two Column Layout</h1>
+</div>
 
-<body>
-    <div id="header">
-        <h1>Super Simple Two Column Layout</h1>
+<div id="content">
+    <div id="sidebar">
+        <ul>
+            <li>@Html.ActionLink("Artykuły", "Index", "ArticlesManager")</li>
+            <li>Sidebar stuff.</li>
+            <li>Sidebar stuff.</li>
+            <li>Sidebar stuff.</li>
+        </ul>
     </div>
 
-    <div id="content">
-        <div id="sidebar">
-            <ul>
-                <li>@Html.ActionLink("Artykuły", "Index", "ArticlesManager")</li>
-                <li>Sidebar stuff.</li>
-                <li>Sidebar stuff.</li>
-                <li>Sidebar stuff.</li>
-            </ul>
-        </div>
+    <div id="main-content">
+        @RenderBody()
 
-        <div id="main-content">
-            @RenderBody()
-
-        </div>
-
-        <div class="clear"></div>
     </div>
 
-</body>
-
-</html>
+    <div class="clear"></div>
+</div>
+@RenderSection("scripts", required: false)
